--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     
-    <title>Login/Signup Form</title>
+    <title>Missing Word Helper</title>
 </head>
 <body>
   <div class="container">
