--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     
     <title>Missing Word Helper</title>
 </head>
+<header>
+  
+</header>
 <body>
   <div class="container">
     <h2 class="text-center mt-5 mb-3">Lyric Quiz Helper</h2>
@@ -26,7 +29,7 @@
           <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
               <div class="form px-4 pt-5">
-                <input type="number" name="" class="form-control" placeholder="Word Length" max="99" id="length">
+                <input type="number" name="" class="form-control" placeholder="Word Length" max="99" min="1" id="length">
                 <textarea rows="5" class="form-control" id="test-input" placeholder="Paste Lyrics Here..."></textarea>
                 <button class="btn btn-dark btn-block" id="find-btn" type="submit">Find</button>
               </div>
